<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_description"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.otimus.ppmo.activities.DescriptionActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/ifb_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ifbNo"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/d_municipalities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ifbNo"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:layout_below="@id/ifb_no"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/bid_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bid_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:layout_weight="1"
            android:paddingRight="10dp"
            />
        <TextView
            android:id="@+id/d_bid_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bid_Title"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:layout_below="@id/bid_Title"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cateogry_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:layout_weight="1"
            android:paddingRight="10dp"
            />
        <TextView
            android:id="@+id/d_category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cateogry_name"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:layout_below="@id/category_name"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/published_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/published_date"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:layout_weight="1"
            android:paddingRight="10dp"
            />
        <TextView
            android:id="@+id/d_published_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/published_date"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:layout_below="@id/published_date"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/last_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_date"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:layout_weight="1"
            android:paddingRight="10dp"
            />
        <TextView
            android:id="@+id/d_last_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_date"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:layout_below="@id/last_date"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/opening_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bid_opening_date"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingLeft="10dp"

            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/d_openingDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bid_opening_date"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:layout_below="@id/opening_date"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/days_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_of_days_left"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingLeft="10dp"

            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/d_daysLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_of_days_left"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:layout_below="@id/days_left"
            android:layout_weight="1"
            />
    </LinearLayout>


    <ListView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">

</ListView>

    <Button
        android:layout_width="match_parent"
        android:id="@+id/btnAdd"
        android:padding="10dp"
        android:layout_weight="0"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#fff"
        android:background="@color/button"
        android:text="Save"
        android:layout_gravity="center"

        android:textSize="20sp"

        android:layout_marginBottom="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:textAllCaps="false"/>

</LinearLayout>
